# ai-assistant

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: chat.py  claude_cli.py  cli_ws.py  conversations.py  files.py  google_auth.py  integrations.py  markets.py  notes.py  schedules.py  voice.py  workouts.py
backend/app/core/: config.py  database.py  sandbox.py
backend/app/models/: __init__.py  conversation.py  schedule.py
backend/app/services/: agent.py  drive_sync.py
backend/app/services/integrations/: github.py  google.py  markets.py  wordpress.py
backend/app/services/llm/: __init__.py  base.py  gemini.py
backend/app/services/scheduler/: scheduler.py
backend/app/services/tools/: base.py  file_tools.py  github_tools.py  google_tools.py  note_tools.py  registry.py  web_tools.py  wordpress_tools.py
backend/app/services/voice/: __init__.py  base.py  elevenlabs_tts.py  whisper_stt.py
backend/scripts/: google_auth_setup.py
backend/tests/: conftest.py  test_api_conversations.py  test_api_health.py  test_websocket_chat.py
docs/: ARCHITECTURE.md  ROADMAP.md  TECH_DECISIONS.md  TODO_TESTS_LOGGING.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/contexts/: ModeContext.tsx
frontend/src/hooks/: useWidgetCollapse.ts  useWordPressCompose.ts  useWordPressPosts.ts
frontend/src/services/: api.ts  tts.ts
frontend/src/types/: speech-recognition.d.ts
frontend/src/utils/: errorLog.ts  logger.ts
(+28 files in other folders)
